@@ -85,21 +85,15 @@ go into the list.  For example, (range 1 6 2) returns '(1 3 5)."
   ;;
   ;; ... except that the function is actually generalized to deal with
   ;; seconds, minutes, etc., in an obvious way :-)
-  ;;
-  ;; Note that value-list always comes from an optional argument to a
-  ;; procedure, so is wrapped up as the first element of a list (i.e. it is a
-  ;; list inside a list).
-  (match value-list
-    (()
-     (set-component! time (1+ (component time))))
-    ((val . rest)
-     (match (%find-best-next (component time) val)
-       ((smallest . closest+)
-        (cond ((inf? closest+)
-               (set-higher-component! time (1+ (higher-component time)))
-               (set-component! time smallest))
-              (else
-               (set-component! time closest+)))))))
+  (if (null? value-list)
+      (set-component! time (1+ (component time)))
+      (match (%find-best-next (component time) value-list)
+        ((smallest . closest+)
+         (cond ((inf? closest+)
+                (set-higher-component! time (1+ (higher-component time)))
+                (set-component! time smallest))
+               (else
+                (set-component! time closest+))))))
   (first (mktime time)))
 
 ;; Set of configuration methods which use the above general function to bump
